[gd_scene load_steps=15 format=2]

[ext_resource path="res://Misc/Coin.gd" type="Script" id=1]
[ext_resource path="res://Misc/Coin/coin_spin0.png" type="Texture" id=2]
[ext_resource path="res://Misc/Coin/coin_spin1.png" type="Texture" id=3]
[ext_resource path="res://Misc/Coin/coin_spin2.png" type="Texture" id=4]
[ext_resource path="res://Misc/Coin/coin_spin3.png" type="Texture" id=5]
[ext_resource path="res://Misc/Coin/coin0.png" type="Texture" id=6]
[ext_resource path="res://Misc/Coin/coin1.png" type="Texture" id=7]
[ext_resource path="res://Misc/Coin/coin2.png" type="Texture" id=8]
[ext_resource path="res://Misc/Coin/coin_spin0.png" type="Texture" id=9]
[ext_resource path="res://Misc/Coin/coin_spin1.png" type="Texture" id=10]
[ext_resource path="res://Misc/Coin/coin_spin2.png" type="Texture" id=11]
[ext_resource path="res://Misc/Coin/coin_spin3.png" type="Texture" id=12]



[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "coin_spin",
"speed": 30.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 6 ) ],
"loop": true,
"name": "coin",
"speed": 7.5
}, {
"frames": [  ],
"loop": false,
"name": "block",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "coin_dropped",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[node name="Coin" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CoinSprite" type="AnimatedSprite" parent="CollectArea"]
z_as_relative = false
frames = SubResource( 1 )
animation = "coin"
frame = 3
playing = true
centered = false

[node name="CoinCollectCollision" type="CollisionShape2D" parent="CollectArea"]
position = Vector2( 8, 8 )
scale = Vector2( 0.75, 0.8 )
shape = SubResource( 2 )

[node name="CoinBlockCollision" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 2 )

[node name="FromBoxDespawn" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5

[node name="EnemyDropTimer1" type="Timer" parent="."]
process_mode = 0
wait_time = 8.0

[node name="EnemyDropTimer2" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
[connection signal="body_entered" from="CollectArea" to="." method="_on_CollectArea_body_entered"]
[connection signal="timeout" from="FromBoxDespawn" to="." method="_on_FromBoxDespawn_timeout"]
[connection signal="timeout" from="EnemyDropTimer1" to="." method="_on_EnemyDropTimer1_timeout"]
[connection signal="timeout" from="EnemyDropTimer2" to="." method="_on_EnemyDropTimer2_timeout"]
